--- a/Front/src/app/home/info/info.component.html
+++ b/Front/src/app/home/info/info.component.html
@@ -6,7 +6,7 @@
 
 <i class="fas fa-home text-blue-500 text-2xl"></i> Home -->
 
-<div class="row w-full  ">
+<div class="row w-full bg-gradient-to-r from-cyan-500 to-blue-500 pt-5  ">
     <div class="cols  ml-12 w-[546px] flex p-2 gap-6 rounded-xl bg-blue-50 h-[80px] mt-6 mb-6">
         <div class="flex items-center">
           <i class="fa fa-check-circle ml-4 text-blue-500" aria-hidden="true"></i>
@@ -21,22 +21,27 @@
           <span class="ml-1">Easy Payment</span>
         </div>
       </div>
-      <div class="flex gap-6 ml-12">
-        <div class="w-1/2 text-5xl">
-          <span>Getting the best and </span><br>
+      <div class="flex gap-12 ml-12">
+        <div class="text-5xl my-2 mx-2 space-y-4 leading-tight">
+          <span>Getting the best and</span><br>
           <span>Latest style has never</span><br>
-          <span class="text-blue-500 font-bold underline">been easier!</span>
+          <span class="text-btn-blue font-bold">been easier!</span><br>
+          <span class="text-sm mb-5">
+            <span class="font-bold break-normal">FashionForAll</span> is a platform that helps to make fashion<br> accessible to all. It brings fashion to your doorstep!
+          </span>
+          
+          
         </div>
-        <div class="w-1/2 images rounded flex gap-12 ml-12">
-          <img src="" alt="image1" [src]="'path_to_your_image_1'" alt="image1">
-          <img src="" alt="image2" [src]="'path_to_your_image_2'" alt="image2">
+        
+        <div class="images ml-24 pb-24">
+          <img src="../../../assets/info.png" alt="image1" [src]="'../../../assets/info.png'" alt="image1">
         </div>
       </div> 
-      <div class="flex mt-5 gap-12 items-center">
-        <app-buttons [buttonText]="'Shop Collections'"></app-buttons>
+      <div class="flex  gap-12 items-center ml-12 mb-8 pb-64  -mt-96">
+        <app-buttons  [styling]="'bg-btn-blue w-[275px] h-[68px]'" [buttonText]="'Shop Collections'"></app-buttons>
         <button class="flex items-center">
             <i class="fas fa-play-circle fa-3x animate-pulse text-red-700 ring-red-700 p-4 rounded-full"></i>
-            Watch reviews
+            <span class="btn-blue">Watch reviews</span>
           </button>
           
       </div>
