--- a/Front/src/app/store/filter/filter.component.html
+++ b/Front/src/app/store/filter/filter.component.html
@@ -1,9 +1,9 @@
 <p>filter works!</p>
 
 <div class="w-1/2 ml-4">
-  <span class="text-blue-600 text-xl font-bold text-center block mb-6">Filter</span>
-  <div class="filter w-1/2 pb-6 p-6 bg-custom-blue ml-2 text-left mb-6">
-    <div class="ml-6 mb-6 pt-0">
+  <span class="text-blue-600 text-xl w-1/2 font-bold text-center block mb-0">Filter</span>
+  <div class="filter w-1/2 pb-6 p-2 ml-2 text-left mb-6">
+    <div class="ml-0 mb-6 pt-0 w-[250px]  bg-custom-blue pl-8 ">
       <p class="font-bold mb-4 mt-4 pt-4">Gender</p>
       <div class="mb-4" *ngFor="let item of gender">
         <label class="inline-block mb-2">
@@ -23,9 +23,9 @@
       <span class="block mb-4">{{ price }}</span>
 
       <p class="font-bold mb-4">Size</p>
-      <div class="mb-4  pb-6" *ngFor="let item of size">
-        <label class="inline-block mb-6 pb-6">
-          <input type="checkbox" class="pb-6" name="size" value="{{ item }}"> {{ item }}
+      <div class="mb-0  pb-0" *ngFor="let item of size">
+        <label class="inline-block mb-4 ">
+          <input type="checkbox" class="" name="size" value="{{ item }}"> {{ item }}
         </label>
       </div>
     </div>
