--- a/Front/src/app/home/what-we-do/what-we-do.component.html
+++ b/Front/src/app/home/what-we-do/what-we-do.component.html
@@ -2,20 +2,22 @@
 
 <span class="flex mb-4 justify-center items-center text-center font-bold text-2xl">What We do</span>
 
-<div class="bg-custom-blue p-4 grid gap-4 mt-4 mx-6 rounded-xl ml-6 mr-6 ">
-  <div class="flex gap-4">
-    <div class="card flex items-center gap-2">
-      <img class="p-2 bg-red-500 rounded-xl" src="image_url" alt="image">
+<div class="bg-white p-6 mb-6 grid gap-6 mt-4 mx-6 rounded-xl shadow-lg">
+  <div class="flex gap-16 ml-6">
+    <div class="card flex items-center gap-6 shadow-lg p-4 rounded-xl bg-white">
+      <!-- <img class="p-6 bg-red-500 rounded-xl" src="image_url" alt="image"> -->
+      <i class="fa-solid fa-cart-shopping p-6 bg-orange-200 rounded-xl text-orange-900"></i>
       <div>
         <span class="font-bold">Shop for latest wears</span><br>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
       </div>
     </div>
 
-    <div class="card flex items-center gap-2">
-      <img class="p-2 bg-red-500 rounded-xl" src="image_url" alt="image">
+    <div class="card flex items-center gap-6 shadow-lg p-4 rounded-xl bg-white">
+      <!-- <img class="p-6 bg-red-500 rounded-xl" src="image_url" alt="image"> -->
+      <i class="fa-solid fa-shirt p-6 bg-purple-200 rounded-xl text-purple-950"></i>
       <div>
-        <span class="font-bold">Shop for latest wears</span><br>
+        <span class="font-bold">Request for measurement for a style</span><br>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
       </div>
     </div>
@@ -23,19 +25,21 @@
 
   <hr class="my-4 border-black mt-4 mb-4">
 
-  <div class="flex gap-4">
-    <div class="card flex items-center gap-2">
-      <img class="p-2 bg-red-500 rounded-xl" src="image_url" alt="image">
+  <div class="flex gap-16 ml-6">
+    <div class="card flex items-center gap-6 shadow-lg p-4 rounded-xl bg-white">
+      <!-- <img class="p-6 bg-red-500 rounded-xl" src="image_url" alt="image"> -->
+      <i class="fa-solid fa-store p-6 bg-blue-200 rounded-xl text-blue-900"></i>
       <div>
-        <span class="font-bold">Shop for latest wears</span><br>
+        <span class="font-bold">Sell your wears</span><br>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
       </div>
     </div>
 
-    <div class="card flex items-center gap-2">
-      <img class="p-2 bg-red-500 rounded-xl" src="image_url" alt="image">
+    <div class="card flex items-center gap-6 shadow-lg p-4 rounded-xl bg-white">
+      <!-- <img class="p-6 bg-red-500 rounded-xl" src="image_url" alt="image"> -->
+      <i class="fa-solid fa-van-shuttle p-6 bg-green-200 rounded-xl text-green-950"></i>
       <div>
-        <span class="font-bold">Shop for latest wears</span><br>
+        <span class="font-bold">Get your wears delivered to you</span><br>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
       </div>
     </div>
