--- a/Front/src/app/home/landing/landing.component.html
+++ b/Front/src/app/home/landing/landing.component.html
@@ -1,1 +1,17 @@
 <p>landing works!</p>
+
+<app-header ></app-header>
+
+<app-info></app-info>
+
+<app-customers></app-customers>
+
+<app-features ></app-features > 
+
+<app-what-we-do></app-what-we-do>
+
+<app-faqs></app-faqs>
+
+<app-footer></app-footer> 
+
+<!-- <app-reviews></app-reviews> -->
