collects emails for marketing

--- a/Front/src/app/home/emails/emails.component.html
+++ b/Front/src/app/home/emails/emails.component.html
@@ -6,8 +6,8 @@
     <p>Sign up for our newsletter and never lose track of your favorite items.</p>
   </div>
 
-  <div class="gap-4">
-    <input type="email" class="border-2 border-blue-600 rounded-lg " placeholder="Enter your email">
-    <app-buttons buttonText="Join Now" class="bg-blue-500 hover:bg-blue-400 text-white"><i class="fa fa-envelope" aria-hidden="true"></i></app-buttons>
+  <div class="gap-12 space-x-6">
+    <input type="email" class="border-2 border-blue-600 rounded-lg w-[400px] h-[60px] border-blue text-center" placeholder="Enter your email">
+    <app-buttons buttonText="Join Now" class="bg-blue-500 hover:bg-blue-400 text-white "><i class="fa fa-envelope" aria-hidden="true"></i></app-buttons>
   </div>
 </div>
