--- a/Front/src/app/home/footer/footer.component.html
+++ b/Front/src/app/home/footer/footer.component.html
@@ -11,7 +11,7 @@
              Donec eget sodales nisl. Donec ut velit erat. </p>
         <p class="mt-2">&copy; {{year}}  All rights reserved.</p>
     </div>
-    <div class="flex gap-32 ml-24 mt-8 space-y-4">
+    <div class="flex gap-32 ml-24 mt-8 space-y-4 mb-8">
         <ul>
                 <ng-container *ngFor="let item of items">
                    <li class="mt-2">{{item}}</li>  
