fix: endpoint services

--- a/Front/src/app/home/customers/customers.component.html
+++ b/Front/src/app/home/customers/customers.component.html
@@ -1,4 +1,4 @@
-<p>customers works!</p>
+<!-- <p>customers works!</p> -->
 
 <div class="card bg-custom-blue-blue p-4 rounded-xl mx-12 flex justify-center items-center">
     <div class="flex flex-col items-center">
