--- a/Front/src/app/home/emails/emails.component.html
+++ b/Front/src/app/home/emails/emails.component.html
@@ -1,4 +1,4 @@
-<p>Emails work!</p>
+<!-- <p>Emails work!</p> -->
 
 <div class="text-center bg-blue-800 p-10  rounded-lg">
   <div class="gap-2 bg-blue-800">
