--- a/Front/src/app/home/footer/footer.component.html
+++ b/Front/src/app/home/footer/footer.component.html
@@ -1,4 +1,4 @@
-<p>footer works!</p>
+<!-- <p>footer works!</p> -->
 
 <hr class="bg-blue-600 ml-16 m-6 w-[1200px] h-[6px]"> 
 <div class="flex gap-16 mr-6 ml-32">
