--- a/Front/src/app/home/info/info.component.html
+++ b/Front/src/app/home/info/info.component.html
@@ -1,4 +1,4 @@
-<p>info works!</p>
+<!-- <p>info works!</p> -->
 <!-- <app-header></app-header>  Use the correct selector for HeaderComponent
 <h1 class="text-3xl font-bold underline text-amber-400	mt-4 pt-4 ml-24">
     Hello world!
