--- a/Front/src/app/home/faqs/faqs.component.html
+++ b/Front/src/app/home/faqs/faqs.component.html
@@ -1,4 +1,4 @@
-<p>faqs!</p>
+<!-- <p>faqs!</p> -->
 
 <div class="max-w-2xl mx-auto p-4">
   <h2 class="text-2xl font-bold mb-6">Frequently Asked Questions</h2>
