--- a/Front/src/app/store/features/features.component.html
+++ b/Front/src/app/store/features/features.component.html
@@ -1,17 +1,19 @@
 <div class="flex">
   <!-- Filter section on the left -->
-  <div class="w-1/4 mr-6">
-    <app-filter></app-filter>
-  </div>
+  <!-- <div class="w-1/4 mr-6"> -->
+    <!-- <app-filter></app-filter> -->
+  <!-- </div> -->
 
   <!-- Featured section on the right -->
-  <div class="feature w-3/4 mt-12 -ml-6">
+  <!-- <div class="feature w-3/4 mt-12 -ml-6"> -->
+    <div class="feature ml-24  mt-12">
+
     <div class="grid">
       <span class="text-center font-bold text-3xl">Our featured store</span>
 
       <div class="flex items-center gap-6">
         <span class="text-center font-bold text-blue-700 text-xl">Ankara styles</span>
-        <span>gender</span>
+        <!-- <span>gender</span> -->
         <div class="flex items-center justify-end flex-grow mr-4">
           <button class="border border-blue-500 text-blue-500 font-bold py-2 px-4 rounded-md bg-transparent focus:outline-none hover:bg-blue-500 hover:text-white transition">
             Sort by Popular
@@ -46,9 +48,10 @@
           <ng-container *ngFor="let item of pagedProducts">
             <div  class="product-card mt-6 w-1/4 shadow-xl rounded-lg relative"
                (click)="openDialog(productGridShow, item)">
-            <div class="img">
-              <img src="https://via.placeholder.com/300x400" alt="{{item.name}}" class="product-img w-full h-72 object-cover p-2 pt-2 rounded-lg shadow-xl">
-            </div>
+               <div class="img">
+                <img [src]="item.image_url" [alt]="item.image_url" class="product-img w-full h-72 object-cover p-2 pt-2 rounded-lg shadow-xl">
+              </div>
+              
             <div class="product-info p-4">
               <h2 class="product-title font-bold text-lg mb-2">{{item.name}}</h2>
               <p class="product-details text-gray-500 text-sm mb-4">
