--- a/Front/src/app/home/reviews/reviews.component.html
+++ b/Front/src/app/home/reviews/reviews.component.html
@@ -1,4 +1,4 @@
-<p>reviews works!</p>
+<!-- <p>reviews works!</p> -->
 <div class="w-full h-48 overflow-hidden relative">
     <div class="flex  w-[30px] h-[130px] gap-10 ml-24" >
       <div *ngFor="let review of reviews" class="min-w-full h-full p-6 flex-shrink-0 flex flex-col justify-center items-center bg-gray-100 rounded-lg shadow-lg">
