--- a/Front/src/app/home/what-we-do/what-we-do.component.html
+++ b/Front/src/app/home/what-we-do/what-we-do.component.html
@@ -1,4 +1,4 @@
-<p>what-we-do works!</p>
+<!-- <p>what-we-do works!</p> -->
 
 <span class="flex mb-4 justify-center items-center text-center font-bold text-2xl">What We do</span>
 
