--- a/Front/src/app/store/features/features.component.html
+++ b/Front/src/app/store/features/features.component.html
@@ -50,6 +50,8 @@
                (click)="openDialog(productGridShow, item)">
                <div class="img">
                 <img [src]="item.image_url" [alt]="item.image_url" class="product-img w-full h-72 object-cover p-2 pt-2 rounded-lg shadow-xl">
+                <!-- <img ngSrc="item.image_url" [alt]="item.image_url" class="product-img w-full h-72 object-cover p-2 pt-2 rounded-lg shadow-xl"> -->
+
               </div>
               
             <div class="product-info p-4">
