implecmented application quick tour demo

--- a/Front/src/app/home/header/header.component.html
+++ b/Front/src/app/home/header/header.component.html
@@ -3,16 +3,16 @@
 <div class="row flex items-center justify-between gap-6 bg-gradient-to-r from-cyan-500 to-blue-500 p-4">
   <div class="cols-2 flex items-center gap-4 text-blue-800 hover:text-white">
     <img src="../../../assets/flogo.png" class="w-[20px] h-[20px] ml-6" alt="logo">
-    <span class="font-bold text-2xl">FashionForAll</span>
+    <span class="font-bold text-2xl" id="title">FashionForAll</span>
   </div>
   
   <div class="col-6 flex gap-16 items-center ">
     
-    <span class="cursor-pointer hover:text-white active:text-blue-500 ">Home</span>
-    <span class="cursor-pointer hover:text-white active:text-blue-500 ">My Orders</span>
+    <span class="cursor-pointer hover:text-white active:text-blue-500 " id="projehome">Home</span>
+    <span class="cursor-pointer hover:text-white active:text-blue-500 " id="orders">My Orders</span>
     <!-- <span class="cursor-pointer hover:text-white active:text-blue-500 ">Contact</span> -->
     <div class="relative group">
-      <span class="cursor-pointer hover:text-white active:text-blue-500">Contact</span>
+      <span class="cursor-pointer hover:text-white active:text-blue-500" id="contact">Contact</span>
     
       <div class="absolute left-0 mt-2 w-48 p-4 bg-gray-800 text-white rounded-lg shadow-lg opacity-0 group-hover:opacity-100 transition-opacity duration-300 hidden group-hover:block">
         <p>Email: contactexample.com</p>
